# ffeel

./: .gitignore  CLAUDE.md  DEVELOPMENT_PLAN.md  PRD.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md
.claude/hooks/: post-build.sh  pre-commit.sh
.claude/rules/: api-conventions.md  code-style.md  testing-guide.md  testing.md  ui-style.md
.claude/skills/deploy/: SKILL.md
.claude/skills/local-test/: SKILL.md
.github/workflows/: build.yml  ci.yml
artifacts-mac/macos/ffeel.app/Contents/: Info.plist
src/: App.css  App.tsx  api.ts  index.css  notification.ts  theme.ts  types.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.github/workflows/: ci.yml  release.yml
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  log.rs  tray.rs
src-tauri/src-tauri/icons/: icon.icns
src-tauri/src/config/: settings.rs
src-tauri/src/discovery/: mod.rs
src-tauri/src/remote/: clipboard.rs  display.rs  input.rs  mod.rs  permissions.rs  recording.rs
src-tauri/src/security/: certificate.rs  mod.rs  pairing.rs
src-tauri/src/server/: http.rs  web_ui.html  ws.rs
src-tauri/src/transfer/: download.rs  mod.rs  queue.rs  rate_limiter.rs  upload.rs
src/__tests__/: dateFormat.test.ts  types.test.ts
src/components/: PairingModal.tsx
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/pages/: Devices.tsx  FileBrowser.tsx  Friends.tsx  RemoteControl.tsx  Settings.tsx  Transfers.tsx
src/stores/: appStore.ts
src/utils/: dateFormat.ts
